<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foregroundGravity="center"
        android:src="@drawable/logo_pic"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"/>
    <LinearLayout
        android:id="@+id/llfitur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/logo"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_news_name"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:onClick="News_Activity"/>
        <ImageView
            android:id="@+id/imgVirus"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:foregroundGravity="left"
            android:src="@drawable/ic_virus"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:onClick="mainActivity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llfitur"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/credit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:textColor="@android:color/background_light"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>