<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorUX"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <View
            android:layout_width="10dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:gravity="end"
                android:id="@+id/txtUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                tools:text="Pembaharuan Terakhir" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_trending_up"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtKonfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/confirmed"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_trending_down"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:id="@+id/txtSembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/recovered"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_mood_bad_black_24dp"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:id="@+id/txtDeath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtNegara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:textSize="14sp"
                tools:text="Lokasi : Jakarta, Indonesia"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>